# vswitch

./: .gitignore  Makefile  README.md  meson.build
src/: cli.c  cli.h  conn.c  ethdev.c  lcore.c  link.c  link.h  link_priv.h  log.h  main.c  mempool.c  mempool.h  mempool_priv.h  meson.build  nl_client.c  nl_server.c  options.c  options.h  stage.c  vswitch.c
src/api/: link.h  mempool.h
src/cli/: cli.c  cli.h  cli_link.c  cli_link.h  cli_mempool.c  cli_mempool.h  cli_stage.c  cli_stage.h  cli_vswitch.c  cli_vswitch.h  meson.build
src/include/: conn.h  lcore.h  link.h  log.h  mempool.h  options.h  stage.h  vswitch.h
src/lib/: meson.build
src/lib/graph/: ethdev_config.c  ethdev_config.h
src/lib/node/: classifier.c  classifier_priv.h  eventdev_dispatcher.c  eventdev_dispatcher.h  eventdev_dispatcher_priv.h  eventdev_rx.c  eventdev_rx.h  eventdev_rx_priv.h  eventdev_tx.c  eventdev_tx.h  eventdev_tx_priv.h  forward.c  forward.h  forward_priv.h
vsctl/: main.c  meson.build
vsnl-interceptor/: sendmsg.c
